Adding code for detecting and creating "Joint Resolution" labels.

--- a/split_cleanup/sentence_splitting.ipynb
+++ b/split_cleanup/sentence_splitting.ipynb
@@ -109,7 +109,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processed the list: 100%|██████████| 9/9 [00:12<00:00,  1.35s/it]  \n"
+      "Processed the list: 100%|██████████| 9/9 [00:12<00:00,  1.38s/it]  \n"
      ]
     }
    ],
@@ -673,37 +673,6 @@
        "sections      320\n",
        "seotion       146\n",
        "srction        41\n",
-       "bection        40\n",
-       "lection        19\n",
-       "sxction        15\n",
-       "nection        13\n",
-       "seection       12\n",
-       "‘section        8\n",
-       "spection        7\n",
-       "sxection        6\n",
-       "ection          5\n",
-       "srection        4\n",
-       "rection         4\n",
-       "secrion         4\n",
-       "tection         4\n",
-       "ssction         4\n",
-       "sectio          3\n",
-       "sgction         2\n",
-       "szction         2\n",
-       "secttion        2\n",
-       "sectuon         1\n",
-       "secticn         1\n",
-       "—section        1\n",
-       "scction         1\n",
-       "sectin          1\n",
-       "seetion         1\n",
-       "sectidn         1\n",
-       "séction         1\n",
-       "vection         1\n",
-       "sectiun         1\n",
-       "suction         1\n",
-       "skction         1\n",
-       "setion          1\n",
        "Name: org_words, dtype: int64"
       ]
      },
@@ -713,7 +682,7 @@
     }
    ],
    "source": [
-    "df_cleaned['org_words'].value_counts()"
+    "df_cleaned['org_words'].value_counts().head()"
    ]
   },
   {
@@ -943,7 +912,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "2cc85c7b-29c4-49eb-9258-f17141e2b232",
+   "id": "462d4b57-44a8-422a-ab71-ea75ea288853",
    "metadata": {
     "tags": []
    },
@@ -954,6 +923,10 @@
     "    Get Act labels for the given sentence.\n",
     "    If the match is an empty string (’’) then the last act is updated by 1.\n",
     "    Else the matched act number is the new act number.\n",
+    "\n",
+    "    Note: Joint Resolutions might be present in the OCRed text, \n",
+    "    but are not needed here. So, to maintain continuity with Act labels, \n",
+    "    Joint Resolutions are labeled as a new Act.\n",
     "\n",
     "    Requires a lastAct variable to keep track of the previous act.\n",
     "    \n",
@@ -976,15 +949,22 @@
     "\n",
     "    global lastAct\n",
     "    res = pattern.search(sentence.lower())\n",
+    "\n",
+    "    # If a Joint Resolution starts with this sentence...\n",
+    "    if 'joint' in sentence.lower().split()[:3] and 'resolution' in sentence.lower().split()[:4]:\n",
+    "        lastAct = str(int(lastAct) + 1)\n",
+    "        return lastAct\n",
     "    \n",
-    "    if res:    \n",
+    "    # Else if a new Act starts...\n",
+    "    elif res:\n",
     "        if res.group(group) == '':  # Act number not given, but act is started\n",
     "            lastAct = str(int(lastAct) + 1)\n",
-    "        else:\n",
+    "\n",
+    "        else:  # Act number given\n",
     "            lastAct = res.group(group)\n",
     "\n",
     "        return lastAct\n",
-    "\n",
+    "    \n",
     "    return fallback"
    ]
   },
@@ -1154,7 +1134,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "49a92a83-b5a9-4d4a-bcab-342b002bb18b",
+   "id": "1f0da8fb-03ec-487d-bdf4-d35992d45332",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5cba8896-9c66-4a20-aac4-1d84785ba1c3",
    "metadata": {
     "tags": []
    },
@@ -1919,7 +1909,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1429d9ba",
+   "id": "1840cd99-9a2b-4728-895d-a19008fe618f",
    "metadata": {
     "tags": []
    },
@@ -4379,8 +4369,70 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_final.insert(1, 'law_type', 'Acts')\n",
+    "df_final.insert(1, 'law_type', pd.NA)\n",
     "df_final.insert(2, 'state', 'SOUTH CAROLINA')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "c63dd50b-70e4-42d1-9397-fb3cb39ff200",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "df_final['law_type'] = df_final.apply(lambda x : addJoints(x['sentence']), axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "64e8b930-5264-4a67-8d62-a32b3aeb8bf9",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "def fixJoints(row_law_type, row_Act_label):\n",
+    "    \"\"\"\n",
+    "    Fix incorrect labels which should be \"Joint Resolution\".\n",
+    "    \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    row_law_type : str\n",
+    "        The current row's law type.\n",
+    "        Ex. 'Act' or 'Joint Resolution'\n",
+    "\n",
+    "    row_Act_label: str\n",
+    "       The current row's Act label/value.\n",
+    "\n",
+    "    Returns\n",
+    "    -------\n",
+    "    str\n",
+    "        Either \"Joint Resolution\" or `row_law_type`.\n",
+    "    \n",
+    "    \"\"\"\n",
+    "    global joint_label\n",
+    "\n",
+    "    # If the row's law_type is 'Joint Resolution', then assign the label number to `joint_label`.\n",
+    "    # This row is already a 'Joint Resolution'\n",
+    "    if row_law_type == 'Joint Resolution':\n",
+    "        joint_label = row_Act_label\n",
+    "        return 'Joint Resolution'\n",
+    "    \n",
+    "    # If this row is not a 'Joint Resolution', then\n",
+    "    # If the row's Act label is the same as `joint_label` then that row should be a Joint Resolution.\n",
+    "    elif row_Act_label == joint_label:\n",
+    "        return 'Joint Resolution'\n",
+    "    \n",
+    "    # Otherwise, that row is an act\n",
+    "    else:\n",
+    "        return row_law_type\n",
+    "        \n",
+    "        \n",
+    "joint_label = -1\n",
+    "df_final['law_type'] = df_final.apply(lambda x: fixJoints(x['law_type'], x['act']), axis = 1)"
    ]
   },
   {
@@ -4401,7 +4453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 64,
    "id": "a3fac3c7",
    "metadata": {
     "tags": []
@@ -4413,7 +4465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 65,
    "id": "25638395-ff48-4730-a801-9b908d5e13cd",
    "metadata": {
     "tags": []
@@ -4428,7 +4480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 66,
    "id": "434cda64-dea4-4bc2-ae19-a8c8aa2cff51",
    "metadata": {
     "tags": []
@@ -4448,7 +4500,7 @@
        " 'path']"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4459,7 +4511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 67,
    "id": "6c245d49-390a-40a6-9e33-a01252491455",
    "metadata": {
     "tags": []
@@ -4471,7 +4523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 68,
    "id": "c65d330f-f8d9-418e-a61e-19484f88475d",
    "metadata": {
     "tags": []
@@ -4531,7 +4583,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>1892_0000</th>\n",
-       "      <td>Acts</td>\n",
+       "      <td>Act</td>\n",
        "      <td>SOUTH CAROLINA</td>\n",
        "      <td>AN ACT TO CONSSTITUTE A BATTALION TO BE KNOWN AS THE NAVAL BATTALION OF VOLUNTEER TROOPS OF SOUTH CAROLINA.</td>\n",
        "      <td>108</td>\n",
@@ -4543,7 +4595,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1892_0001</th>\n",
-       "      <td>Acts</td>\n",
+       "      <td>Act</td>\n",
        "      <td>SOUTH CAROLINA</td>\n",
        "      <td>SEcTION 1. Be tt enacted by the Senate and House of Representatives of the State of South Carolina, now met and sitting in General Assembly, and by the authority of the same, That there shall be allowed, in addition to the companies of the Vol-t unteer Troops of the State of South Carolina as now provided by law, not more than four companies of Naval Militia, which shall constitute a battalion, to be known as the Naval Battalion of the Volunteer Troops of South Carolina.</td>\n",
        "      <td>476</td>\n",
@@ -4555,7 +4607,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1892_0002</th>\n",
-       "      <td>Acts</td>\n",
+       "      <td>Act</td>\n",
        "      <td>SOUTH CAROLINA</td>\n",
        "      <td>The officers of this battalion shall consist of a Lieutenant Commander, who shall be appointed by the Governor, and whose rank and pay shall assimilate to that of a Major of infantry, and a staff, to consist of one Adjutant, one Ordnance Officer, one Paymaster, who shall be the mustering officer, and one Surgeon, each with the rank of First Lieutenant.</td>\n",
        "      <td>355</td>\n",
@@ -4567,7 +4619,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1892_0003</th>\n",
-       "      <td>Acts</td>\n",
+       "      <td>Act</td>\n",
        "      <td>SOUTH CAROLINA</td>\n",
        "      <td>They shall be paid the same as battalion staffs in the Volunteer Troops.</td>\n",
        "      <td>73</td>\n",
@@ -4579,7 +4631,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1892_0004</th>\n",
-       "      <td>Acts</td>\n",
+       "      <td>Act</td>\n",
        "      <td>SOUTH CAROLINA</td>\n",
        "      <td>There shall also be attached to the staff the following petty officers: One Master-at-Arms, two Yeomen, one Hospital Steward, one Chief Bugler, who shall receive the same pay as the non-commissioned staff of a battalion of infantry.</td>\n",
        "      <td>233</td>\n",
@@ -4603,7 +4655,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1956_4308</th>\n",
-       "      <td>Acts</td>\n",
+       "      <td>Act</td>\n",
        "      <td>SOUTH CAROLINA</td>\n",
        "      <td>1132 An Act To Require The Commissioner Of Agriculture Of South Carolina To Determine What Are Noxious Weeds And Plants; To Prevent Importation Into The State Of Such Weeds And Plants And To Provide A Penalty For The Violation of The Provisions Of This Act.</td>\n",
        "      <td>258</td>\n",
@@ -4615,7 +4667,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1956_4309</th>\n",
-       "      <td>Acts</td>\n",
+       "      <td>Act</td>\n",
        "      <td>SOUTH CAROLINA</td>\n",
        "      <td>Be it enacted by the General Assembly of the State of South Carolina Commissioner of Agriculture—regulate importation of noxious weeds—penalties SECTION 1.</td>\n",
        "      <td>156</td>\n",
@@ -4627,7 +4679,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1956_4310</th>\n",
-       "      <td>Acts</td>\n",
+       "      <td>Act</td>\n",
        "      <td>SOUTH CAROLINA</td>\n",
        "      <td>The Commissioner of Agriculture of South Carolina shall determine what are noxious weeds and plants, and shall publish such determination in suitable rules and regulations which shall be duly promulgated in accordance with law.</td>\n",
        "      <td>228</td>\n",
@@ -4639,7 +4691,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1956_4311</th>\n",
-       "      <td>Acts</td>\n",
+       "      <td>Act</td>\n",
        "      <td>SOUTH CAROLINA</td>\n",
        "      <td>Any such plants or weeds unlawfully imported into the State may be seized and confiscated, and in addition thereto any person found guilty of importing noxious weeds or plants into the State in violation of the terms of this act or any rule or regulation duly promulgated by the Commissioner of Agriculture shall be fined not more than one hundred dollars or sentenced to not more than thirty days confinement.</td>\n",
        "      <td>411</td>\n",
@@ -4651,7 +4703,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1956_4312</th>\n",
-       "      <td>Acts</td>\n",
+       "      <td>Act</td>\n",
        "      <td>SOUTH CAROLINA</td>\n",
        "      <td>Approved the 13th day of June, 1956.</td>\n",
        "      <td>37</td>\n",
@@ -4669,17 +4721,17 @@
       "text/plain": [
        "          law_type           state  \\\n",
        "id                                   \n",
-       "1892_0000     Acts  SOUTH CAROLINA   \n",
-       "1892_0001     Acts  SOUTH CAROLINA   \n",
-       "1892_0002     Acts  SOUTH CAROLINA   \n",
-       "1892_0003     Acts  SOUTH CAROLINA   \n",
-       "1892_0004     Acts  SOUTH CAROLINA   \n",
+       "1892_0000      Act  SOUTH CAROLINA   \n",
+       "1892_0001      Act  SOUTH CAROLINA   \n",
+       "1892_0002      Act  SOUTH CAROLINA   \n",
+       "1892_0003      Act  SOUTH CAROLINA   \n",
+       "1892_0004      Act  SOUTH CAROLINA   \n",
        "...            ...             ...   \n",
-       "1956_4308     Acts  SOUTH CAROLINA   \n",
-       "1956_4309     Acts  SOUTH CAROLINA   \n",
-       "1956_4310     Acts  SOUTH CAROLINA   \n",
-       "1956_4311     Acts  SOUTH CAROLINA   \n",
-       "1956_4312     Acts  SOUTH CAROLINA   \n",
+       "1956_4308      Act  SOUTH CAROLINA   \n",
+       "1956_4309      Act  SOUTH CAROLINA   \n",
+       "1956_4310      Act  SOUTH CAROLINA   \n",
+       "1956_4311      Act  SOUTH CAROLINA   \n",
+       "1956_4312      Act  SOUTH CAROLINA   \n",
        "\n",
        "                                                                                                                                                                                                                                                                                                                                                                                                                                                                                               sentence  \\\n",
        "id                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        \n",
@@ -4753,7 +4805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 69,
    "id": "b6f2ff89-3e25-441f-bbe2-86f632683108",
    "metadata": {
     "tags": []
@@ -4765,7 +4817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "id": "fbb4f1b5",
    "metadata": {
     "tags": []
