Final updates to Splitting and Cleanup

--- a/split_cleanup/sentence_splitting.ipynb
+++ b/split_cleanup/sentence_splitting.ipynb
@@ -688,6 +688,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b67a2b29-712d-4541-9292-bf26b2f4b885",
+   "metadata": {},
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "6f1d8ed0",
    "metadata": {
     "tags": []
@@ -963,6 +971,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "da0f38cb-158c-48a1-bf29-418d77592d11",
+   "metadata": {},
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "e5822c30",
    "metadata": {
     "tags": []
@@ -1233,12 +1249,23 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c7a9a45b-538a-4af3-9b59-b89b378be0eb",
+   "metadata": {},
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "8fa2fcfb",
    "metadata": {
     "tags": []
    },
    "source": [
-    "### Removing End-Of-Line Hyphenation"
+    "### Removing End-Of-Line Hyphenation\n",
+    "Whenever a word in the sentence continues from the end of a line to the beginning of the next line and is joined by a hyphen, the OCRed sentence also contains that hyphen and a space.\n",
+    "For example, 'Commander-in-Chief' is OCRed as 'Com- mander-in-Chief'\n",
+    "The following code implements regex patterns to remove \"- \" in the text since each hyphenated word is split with \"- \"."
    ]
   },
   {
@@ -1419,12 +1446,22 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7451372b-b72f-4bea-b55b-dfb0e63e9e40",
+   "metadata": {},
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "d1df9fba",
    "metadata": {
     "tags": []
    },
    "source": [
-    "### Removing Act Seperators"
+    "### Removing Act Seperators\n",
+    "The horizontal lines differentiating one Act from another show up as U+2014 : EM DASH characters (one or multiple) in the OCR.\n",
+    "<br>For example, '——- —— AN ACT...' or '—— AN ACT...'"
    ]
   },
   {
