--- a/split_cleanup/discrepancy_fix/discrepancy_fix.ipynb
+++ b/split_cleanup/discrepancy_fix/discrepancy_fix.ipynb
@@ -47,21 +47,15 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "71e948ca-a5b4-40e0-8920-b721123479fe",
-   "metadata": {
-    "scrolled": true
-   },
-   "source": [
-    "df = df.drop('Unnamed: 0', axis=1)"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "id": "25eedd76-1ef5-40bb-8693-08721d2cdfca",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9a3477c3-8d86-42b2-acc2-e6c211ef35e9",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "df = df.rename({'Act_No': 'Page_No'}, axis = 1)"
+    "# Either of the following 2 lines of code might be needed for some files\n",
+    "# df = df.drop('Unnamed: 0', axis=1)\n",
+    "# df = df.rename({'Act_No': 'Page_No'}, axis = 1)"
    ]
   },
   {
